# KnightVsRed

./: KnightVsRed.uproject  LICENSE  README.md
Config/: DefaultEngine.ini  DefaultGame.ini  DefaultInput.ini
Content/animation/: _Attack_attack.uasset  _Idle_idle.uasset  _Run_run.uasset
Content/animation/knight/: _Attack_attack.uasset  _Idle_idle.uasset  _Run_run.uasset
Content/animation/red/: idle_sheet-Sheet1.uasset
Content/blueprints/: KnightPawn_Blueprint.uasset
Content/scene/: main.umap  main_BuiltData.uasset
Content/sprites/: _Attack.uasset  _Attack_attack_Sprite_0.uasset  _Attack_attack_Sprite_1.uasset  _Attack_attack_Sprite_2.uasset  _Attack_attack_Sprite_3.uasset  _Idle.uasset  _Idle_idle_Sprite_0.uasset  _Idle_idle_Sprite_1.uasset  _Idle_idle_Sprite_2.uasset  _Idle_idle_Sprite_3.uasset  _Idle_idle_Sprite_4.uasset  _Idle_idle_Sprite_5.uasset  _Idle_idle_Sprite_6.uasset  _Idle_idle_Sprite_7.uasset  _Idle_idle_Sprite_8.uasset  _Idle_idle_Sprite_9.uasset  _Run.uasset  _Run_run_Sprite_0.uasset  _Run_run_Sprite_1.uasset  _Run_run_Sprite_2.uasset  _Run_run_Sprite_3.uasset  _Run_run_Sprite_4.uasset  _Run_run_Sprite_5.uasset  _Run_run_Sprite_6.uasset  _Run_run_Sprite_7.uasset  _Run_run_Sprite_8.uasset  _Run_run_Sprite_9.uasset
Content/sprites/knight/attack/: _Attack.uasset  _Attack_attack_Sprite_0.uasset  _Attack_attack_Sprite_1.uasset  _Attack_attack_Sprite_2.uasset  _Attack_attack_Sprite_3.uasset
Content/sprites/knight/idle/: _Idle.uasset  _Idle_idle_Sprite_0.uasset  _Idle_idle_Sprite_1.uasset  _Idle_idle_Sprite_2.uasset  _Idle_idle_Sprite_3.uasset  _Idle_idle_Sprite_4.uasset  _Idle_idle_Sprite_5.uasset  _Idle_idle_Sprite_6.uasset  _Idle_idle_Sprite_7.uasset  _Idle_idle_Sprite_8.uasset  _Idle_idle_Sprite_9.uasset
Source/: KnightVsRed.Target.cs  KnightVsRedEditor.Target.cs
Source/KnightVsRed/: KVRGameController.cpp  KVRGameController.h  KnightController.cpp  KnightController.h  KnightPawn.cpp  KnightPawn.h  KnightVsRed.Build.cs  KnightVsRed.cpp  KnightVsRedGameModeBase.cpp  KnightVsRedGameModeBase.h  common.h
server/: CMakeLists.txt  main.cpp
server/common/: CMakeLists.txt  buffer.cpp  gametime.cpp  handler.cpp  logger.cpp  networkmanager.cpp  servermanager.cpp  servertemplate.cpp  servertemplate.h  singleton.h
server/common/include/: buffer.cpp  buffer.h  commondefine.h  connection.h  fileraii.h  gametime.h  handler.h  logger.h  main_t.h  networkmanager.h  raii.h  servermanager.h  servertemplate.h  singleton.h
server/gameserver/: main.cpp
server/homeserver/: CMakeLists.txt  homeserver.cpp  main.cpp
server/homeserver/include/: homeserver.h
server/plugin/: CMakeLists.txt  atomicops.h  bitmap.cpp  bitmap.h  fileutils.cpp  fileutils.h  kfifo.h  magic_enum.h  readerwriterqueue.h  stringutils.cpp  stringutils.h
server/test/: CMakeLists.txt  main.cpp  test.cpp  test_log.cpp  test_raii.cpp  test_server.cpp
开发文档/: gtest的配置.md
(+30 files in other folders)
